# cxx-potts-sampler

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
include/: Model.h  Sampler.h  Update.h  model.hpp  sampler.hpp  state.hpp
include/CppSampler/: Compress.h  Contract.h  Graph.h  Model.h  Sampler.h  Update.h
lib/: CMakeLists.txt  model.cpp  random.cpp  random.hpp  sampler.cpp  sampler.hpp  state.cpp  state.hpp  update.cpp  update.hpp
src/: CMakeLists.txt  Compress.cpp  Compress.h  Contract.cpp  Contract.h  Graph.cpp  Graph.h  Model.cpp  Model.h  PottsModel.cpp  PottsModel.h  Sampler.cpp  Sampler.h  Update.cpp  Update.h  main.cpp
test/: CMakeLists.txt  model.test.cpp  random.test.cpp  sampler.test.cpp  state.test.cpp  test_interfaces.hpp  update.test.cpp
tests/: CMakeLists.txt  TestClasses.h  main.cpp  model.test.cpp  sampler.test.cpp  update.test.cpp
tools/: CMakeLists.txt  cli.cpp
